# thermal_camera

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  application.cpp  application.h  applicationui.h  dump1.txt  exp.txt  fix1.txt  fix2.txt  hardcopy.0  main.cpp  main.h  renderer.cpp  renderer.h  testttt.txt  todo  ver1.txt  ver2.txt
config/: Makefile.inc  miosix_settings.h
config/arch/cortexM0plus_rp2040/rp2040_raspberry_pi_pico/: board_settings.h
config_old/: Makefile.inc  miosix_settings.h
drivers/: MLX90640_API.cpp  MLX90640_API.h  display_er_oledm015.cpp  display_er_oledm015.h  flash.cpp  hwmapping.h  misc.cpp  mlx90640.cpp  mlx90640.h  mlx90640frame.cpp  mlx90640frame.h  mram.cpp  mram.h  options_save.cpp  rp2040_gpio.h  rp2040_i2c.cpp  rp2040_i2c.h  rp2040_spi.cpp  rp2040_spi.h  usb_tinyusb.cpp
scripts/: benchmark_cmake_variants.py
tinyusb/: tusb_os_custom.h
